Only show breaking border when related issues are in place to avoid double border

--- a/app/assets/stylesheets/pages/issues/related_issues.scss
+++ b/app/assets/stylesheets/pages/issues/related_issues.scss
@@ -11,7 +11,7 @@
   margin-left: 0.5em;
 }
 
-.related-issues-add-related-issues-form {
+.related-issues-add-related-issues-form-with-break {
   border-bottom: 1px solid $border-color;
 }
 
